    Implement Pacer Movement
3/8/2022
------------
    Implemented Wanderer Movement
    Added Player standing still movement command
    Implemented remaining NPC movement & more.
3/20/2022
------------
    Started implementing Ncurses
    Got map to output using Ncurses
    Color coding works
3/21/2022
------------
    IDK why but color isn't working anymore
    Added player movement using ncurses
    Ripped out a bunch of no-longer needed code
    Added ability for NPC's to start battle with player when attempting to path onto their tile
    Added ability for PC's to start battle with NPC's when attempting to path onto their tile
3/22/2022
------------
    BUG FOUND: When player is inside a building, NPC's will still start a battle with them if adjacent.
3/23/2022
------------
    Fixed bug where NPC's would start battle with player when in buildings.
    Adding cross-map movement
    Bug found where map exits aren't lining up but they totally should be
    Added going into buildings and their screens
    Bug found where arrows keys are detected at ESC
3/24/2022
------------
    Fixed arrow keys bug
    Fixed maps not lining up, outdated code caused it.
    Added trainers becoming dead when exiting battle with them
    Added various screens(marts/centers/battle/trainer/etc.)
    Added the rest of cross-map movement.
    Added all the things. I lost track.
3/28/2022
------------
    Started work on porting to C++
3/29/2022
------------
    Finished work on porting to C++
3/30/2022
------------
    Started work on parsing data from passed in CSV files
    Currently have it reading accurate number of lines, classes to come ig?
3/31/2022
------------
    Added all file parsing. No bugs I don't think?
4/1/2022
------------
    Changed input file method to command line instead of runtime to meet assignment specs. Oops.
4/4/2022
    Starting work on implementing pokemon battles
    Changed cost map generation to only happen when there at least 1 trainer.